syntax = "proto3";

package product;

option go_package = "./product";

service Product {
  rpc Pagination(PaginationReq) returns(PaginationResp);
  rpc Info(InfoReq) returns(ProductInfo);
}

// pagination
message PaginationReq {
  int64 cursor = 1;
  int64 limit = 2;
}

message PaginationResp {
  repeated ProductInfo products = 1;
}

// information
message InfoReq {
  int64 product_id = 1;
}

message ProductInfo {
  int64 id = 1;
  int64 brand_id = 2;
  int64 category_id = 3;
  string series = 4;
  string name = 5;
  string abbreviation = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}
